- Fix text truncated in notification

--- a/Branchs/Trunk/CoffeeShop/WebContent/VAADIN/themes/tests-valo-facebook/styles.scss
+++ b/Branchs/Trunk/CoffeeShop/WebContent/VAADIN/themes/tests-valo-facebook/styles.scss
@@ -326,7 +326,7 @@
     }
 
     .v-Notification.warning {
-       height: 20%;
+       height: auto;
        width: 90%;
        font-size: 40px;
     }
